fix project page height bug
remove to fix issue of white space on deployed site

--- a/projects.css
+++ b/projects.css
@@ -16,9 +16,9 @@
 }
 /* css for project page*/
 
-.projects {
+/* .projects {
     height:100vh;
-}
+} */
 .projects section {
   display: flex;
   flex-direction: column;
